--- a/styles/app.css
+++ b/styles/app.css
@@ -1,15 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap");
 
 html {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, "Open Sans", sans-serif;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
   font-feature-settings: "ss01";
 }
 
 .font-display {
   font-family: Lexend, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue,
     Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-feature-settings: "ss01";
+}
+
+.ss01 {
+  -moz-font-feature-settings: "ss01" on;
+  -o-font-feature-settings: "ss01" on;
+  -webkit-font-feature-settings: "ss01" on;
+  font-feature-settings: "ss01" on;
+  font-kerning: normal;
 }
