--- a/styles/app.css
+++ b/styles/app.css
@@ -3,6 +3,27 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap");
 
+@font-face {
+  font-family: "Benzin";
+  src: url("/fonts/Benzin/Benzin-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Benzin";
+  src: url("/fonts/Benzin/Benzin-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Benzin";
+  src: url("/fonts/Benzin/Benzin-Bold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+
 html {
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
   font-feature-settings: "ss01";
