--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1262,6 +1262,10 @@ video {
   border-width: 0;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1462,6 +1466,10 @@ video {
   margin-right: -18rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-9 {
   margin-bottom: 2.25rem;
 }
@@ -1604,6 +1612,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.max-h-60 {
+  max-height: 15rem;
 }
 
 .min-h-full {
@@ -1755,6 +1767,10 @@ video {
   cursor: pointer;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1844,6 +1860,10 @@ video {
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1862,6 +1882,12 @@ video {
 
 .scroll-smooth {
   scroll-behavior: smooth;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .rounded-2xl {
@@ -1981,6 +2007,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-amber-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
+}
+
+.bg-sky-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -2162,6 +2198,16 @@ video {
   padding-right: 1rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -2233,6 +2279,18 @@ video {
   padding-top: 1.5rem;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
 .text-right {
   text-align: right;
 }
@@ -2296,12 +2354,12 @@ video {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-10 {
@@ -2388,6 +2446,26 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-amber-600 {
+  --tw-text-opacity: 1;
+  color: rgb(217 119 6 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-sky-600 {
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -2421,6 +2499,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-black\/5 {
   --tw-shadow-color: rgb(0 0 0 / 0.05);
   --tw-shadow: var(--tw-shadow-colored);
@@ -2428,6 +2518,16 @@ video {
 
 .shadow-slate-900\/5 {
   --tw-shadow-color: rgb(15 23 42 / 0.05);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-black {
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-gray-300 {
+  --tw-shadow-color: #d1d5db;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -2447,6 +2547,15 @@ video {
 
 .ring-white\/10 {
   --tw-ring-color: rgb(255 255 255 / 0.1);
+}
+
+.ring-black {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
+}
+
+.ring-opacity-5 {
+  --tw-ring-opacity: 0.05;
 }
 
 .blur-lg {
@@ -2472,12 +2581,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-100 {
   transition-duration: 100ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .ease-in {
@@ -3267,6 +3382,21 @@ html {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.focus-visible\:border-indigo-500:focus-visible {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
+
+.focus-visible\:border-blue-500:focus-visible {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.focus-visible\:border-sky-500:focus-visible {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
+}
+
 .focus-visible\:outline-2:focus-visible {
   outline-width: 2px;
 }
@@ -3281,6 +3411,33 @@ html {
 
 .focus-visible\:outline-white\/50:focus-visible {
   outline-color: rgb(255 255 255 / 0.5);
+}
+
+.focus-visible\:ring-2:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-white:focus-visible {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+}
+
+.focus-visible\:ring-opacity-75:focus-visible {
+  --tw-ring-opacity: 0.75;
+}
+
+.focus-visible\:ring-offset-2:focus-visible {
+  --tw-ring-offset-width: 2px;
+}
+
+.focus-visible\:ring-offset-orange-300:focus-visible {
+  --tw-ring-offset-color: #fdba74;
+}
+
+.focus-visible\:ring-offset-sky-300:focus-visible {
+  --tw-ring-offset-color: #7dd3fc;
 }
 
 .active\:bg-sky-500:active {
@@ -3480,10 +3637,35 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
 .dark .dark\:shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark .dark\:shadow-gray-200 {
+  --tw-shadow-color: #e5e7eb;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:shadow-gray-600 {
+  --tw-shadow-color: #4b5563;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:shadow-gray-700 {
+  --tw-shadow-color: #374151;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .dark .dark\:ring-1 {
@@ -3617,6 +3799,53 @@ html {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .font-inter .sm\:text-sm,.sm\:text-sm .font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: -0.0223em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-tighter, .font-inter .sm\:text-sm.tracking-tighter,.sm\:text-sm .font-inter .tracking-tighter,.sm\:text-sm .font-inter.tracking-tighter, .tracking-tighter .font-inter .sm\:text-sm, .tracking-tighter .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: -0.0723em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-tight, .font-inter .sm\:text-sm.tracking-tight,.sm\:text-sm .font-inter .tracking-tight,.sm\:text-sm .font-inter.tracking-tight, .tracking-tight .font-inter .sm\:text-sm, .tracking-tight .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: -0.0473em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-normal, .font-inter .sm\:text-sm.tracking-normal,.sm\:text-sm .font-inter .tracking-normal,.sm\:text-sm .font-inter.tracking-normal, .tracking-normal .font-inter .sm\:text-sm, .tracking-normal .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: -0.0223em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-wide, .font-inter .sm\:text-sm.tracking-wide,.sm\:text-sm .font-inter .tracking-wide,.sm\:text-sm .font-inter.tracking-wide, .tracking-wide .font-inter .sm\:text-sm, .tracking-wide .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.0027em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-wider, .font-inter .sm\:text-sm.tracking-wider,.sm\:text-sm .font-inter .tracking-wider,.sm\:text-sm .font-inter.tracking-wider, .tracking-wider .font-inter .sm\:text-sm, .tracking-wider .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.0277em;
+  }
+
+  .font-inter .sm\:text-sm .tracking-widest, .font-inter .sm\:text-sm.tracking-widest,.sm\:text-sm .font-inter .tracking-widest,.sm\:text-sm .font-inter.tracking-widest, .tracking-widest .font-inter .sm\:text-sm, .tracking-widest .sm\:text-sm.font-inter {
+    line-height: 1.25rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.0777em;
   }
 }
 
